--- a/Themes/Akame/Akame.theme.css
+++ b/Themes/Akame/Akame.theme.css
@@ -4,12 +4,12 @@
 /*MAKE SURE THE LINKS YOU USE START WITH HTTPS:// OR THEY WONT WORK*/
 
 .app {
-    background-image: url("https://i.imgur.com/6DOrpXX.jpg") !important;
+    background-image: url("https://http://wallpapersin4k.net/wp-content/uploads/2017/01/Shinmai-Maou-No-Testament-Wallpapers-2.jpg") !important;
     background-size: cover !important;
 }
 .callout-backdrop {
     opacity: 1 !important;
-    background-image: url("https://i.imgur.com/6DOrpXX.jpg") !important;
+    background-image: url("https://http://wallpapersin4k.net/wp-content/uploads/2017/01/Shinmai-Maou-No-Testament-Wallpapers-2.jpg") !important;
     background-size: cover !important;
     -webkit-filter: brightness(35%);
 }
